--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,6 +36,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
+    <script>(function(w, d) { w.CollectId = "625fe41da20f4c4498137008"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
     <title>React App</title>
   </head>
   <body>
